# Chimoney-SDK-Challenge-Covenant-University

./: .gitignore
.ua/: domain-graph.json
SDK Submissions/chimoney_rust_sdk/: .gitignore  CHANGELOG.md  Cargo.toml
SDK Submissions/chimoney_rust_sdk/.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-13-brief.md  task-13-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md
SDK Submissions/chimoney_rust_sdk/docs/superpowers/plans/: 2026-07-23-rust-sdk-code-quality.md
SDK Submissions/chimoney_rust_sdk/docs/superpowers/specs/: 2026-07-23-rust-sdk-code-quality-design.md  2026-07-23-v0.3.0-new-endpoints-design.md
SDK Submissions/chimoney_rust_sdk/examples/: basic_usage.rs
SDK Submissions/chimoney_rust_sdk/src/: client.rs  error.rs  lib.rs  middleware.rs
SDK Submissions/chimoney_rust_sdk/src/types/: account.rs  agent.rs  beneficiary.rs  mod.rs  multicurrency_wallet.rs  payment.rs  payout.rs  redeem.rs  subaccount.rs  wallet.rs
SDK Submissions/chimoney_rust_sdk/tests/: client_test.rs  types_test.rs
