[package]
name = "chimoney_rust_sdk"
version = "0.2.0"
edition = "2021"
description = "Rust SDK for the Chimoney API"
license = "MIT"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
